# NativeWindow

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Source/: Application.Mac.mm  Application.Win.cpp  Application.cpp  Application.h  Window.Mac.mm  Window.Win.cpp  Window.cpp  Window.h
Tests/: test.cpp
